--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,13 @@ dependencies:
   easy_localization: ^3.0.7
   board_datetime_picker: ^2.0.0
 
-  uuid: ^4.4.0
+  uuid:
+    ^4.4.0
+
+    #firebase
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.0.2
 
 flutter_native_splash:
   android: true
