--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,32 @@ flutter_native_splash:
   web: false
   background_image: "assets/image/imtBackground.png"
   image: "assets/image/imt.png"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/image/imtLogo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "path/to/image.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "path/to/image.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "path/to/image.png"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   generate: true
