--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   easy_localization: ^3.0.7
   board_datetime_picker: ^2.0.0
+  image_picker: ^1.1.2
 
   uuid:
     ^4.4.0
@@ -30,6 +31,7 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
   cloud_firestore: ^5.0.2
+  dio: ^5.5.0+1
 
 flutter_native_splash:
   android: true
@@ -42,7 +44,7 @@ flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/image/imtLogo.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  min_sdk_android: 21
   web:
     generate: true
     image_path: "path/to/image.png"
