--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
   cloud_firestore: ^5.0.2
-  dio: ^5.5.0+1
+  firebase_storage: ^12.1.1
 
+  dio: ^5.5.0+1
 flutter_native_splash:
   android: true
   ios: true
